<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.coffeequiz.ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_vertical"
            android:src="@drawable/kawaii_coffee" />

        <TextView
            android:id="@+id/results_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin_vertical"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/name_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/results_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_horizontal"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/question_text_size" />

        <TextView
            android:id="@+id/congrats_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/layout_margin_horizontal"
            android:text="@string/congrats_message"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/header_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_vertical">

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/layout_margin_vertical"
                android:onClick="startMainActivity"
                android:text="@string/try_again_button_text" />

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/layout_margin_vertical"
                android:onClick="shareResults"
                android:text="@string/share_results_button_text" />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>
